# engine

./: .gitignore  package.json
cocoindex/: .env.example  main.py  mcp_server.py  pyproject.toml
nm-packages/engine.dashboard/: engine.config.js  package.json  playwright.config.ts
nm-packages/engine.dashboard/e2e/: app.spec.ts
