[project]
name = "engine-cocoindex"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "cocoindex>=0.1.72",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "mcp[cli]>=1.0",
]

[tool.uv]
dev-dependencies = []
